# vite-rspc-solid

./: .gitignore  Cargo.toml  bacon.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite-plugin-gen-rpc.ts  vite.config.ts
src/: main.rs  spa.rs
src-frontend/: App.tsx
src-frontend/component/: rpc-hello-world.tsx
src-frontend/logic/: backend.ts
src-frontend/types/: backend-rpc.d.ts
